[gd_scene load_steps=13 format=3 uid="uid://2l3ierptd4l7"]

[ext_resource type="Script" uid="uid://dwhvjoncopx7" path="res://Nodes/camerastuff/camera_game.gd" id="1_s8pvj"]
[ext_resource type="Texture2D" uid="uid://dtksdrkevm48w" path="res://Sprites/Goblin_bases/line.png" id="2_a1tvy"]
[ext_resource type="Texture2D" uid="uid://cct1smjgqmafv" path="res://Sprites/Goblin_bases/timer_red_ex.png" id="3_dljb1"]
[ext_resource type="Script" uid="uid://cbc6shhhcxfv8" path="res://Nodes/camerastuff/timer.gd" id="3_lo5g3"]
[ext_resource type="Texture2D" uid="uid://b06c4mkup5i35" path="res://Sprites/Goblin_bases/timer_yellow.png" id="4_vnuoq"]

[sub_resource type="Animation" id="Animation_is3jd"]
resource_name = "2-1"
length = 1.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("camera_1_box:size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(576, 648), Vector2(1152, 648)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("camera_2_box:size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(576, 648)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("camera_2_box:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(-576, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("camera_1_box:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(576, 0), Vector2(0, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Line:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 1, 1.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(575, 324), Vector2(0, 324), Vector2(-56, 324)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("camera_2_box/SubViewport2/Camera2D2:enabled")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(1, 1.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_1a7s5"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("camera_1_box:size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(576, 648)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("camera_2_box:size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(576, 648)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("camera_2_box:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("camera_1_box:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(576, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Line:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(575, 324)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("camera_2_box/SubViewport2/Camera2D2:enabled")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_76qqa"]
_data = {
&"2-1": SubResource("Animation_is3jd"),
&"RESET": SubResource("Animation_1a7s5")
}

[sub_resource type="Animation" id="Animation_d2yji"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TimerRed:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TimerRed:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("TimerYELLOW:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("TimerYELLOW:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_oejq3"]
resource_name = "TimerRed"
length = 4.1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TimerRed:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 4.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TimerRed:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1, 2, 3, 4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4]
}

[sub_resource type="Animation" id="Animation_pq4xg"]
resource_name = "TimerYellow"
length = 4.1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TimerYELLOW:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 4),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TimerYELLOW:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1, 2, 3, 3.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_v3dux"]
_data = {
&"RESET": SubResource("Animation_d2yji"),
&"TimerRed": SubResource("Animation_oejq3"),
&"TimerYellow": SubResource("Animation_pq4xg")
}

[node name="Camera_game" type="Node2D"]
script = ExtResource("1_s8pvj")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="camera_1_box" type="SubViewportContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 576.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
stretch = true

[node name="SubViewport" type="SubViewport" parent="CanvasLayer/camera_1_box"]
handle_input_locally = false
canvas_item_default_texture_filter = 0
size = Vector2i(576, 648)
render_target_update_mode = 4

[node name="Camera2D" type="Camera2D" parent="CanvasLayer/camera_1_box/SubViewport"]

[node name="camera_2_box" type="SubViewportContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -576.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
stretch = true

[node name="SubViewport2" type="SubViewport" parent="CanvasLayer/camera_2_box"]
handle_input_locally = false
canvas_item_default_texture_filter = 0
size = Vector2i(576, 648)
render_target_update_mode = 4

[node name="Camera2D2" type="Camera2D" parent="CanvasLayer/camera_2_box/SubViewport2"]
enabled = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer"]
libraries = {
&"": SubResource("AnimationLibrary_76qqa")
}

[node name="Line" type="Sprite2D" parent="CanvasLayer"]
position = Vector2(575, 324)
texture = ExtResource("2_a1tvy")

[node name="Timer" type="Node2D" parent="CanvasLayer"]
script = ExtResource("3_lo5g3")

[node name="TimerRed" type="Sprite2D" parent="CanvasLayer/Timer"]
visible = false
position = Vector2(41, 41)
scale = Vector2(5, 5)
texture = ExtResource("3_dljb1")
hframes = 5

[node name="TimerYELLOW" type="Sprite2D" parent="CanvasLayer/Timer"]
visible = false
position = Vector2(126, 40)
scale = Vector2(5, 5)
texture = ExtResource("4_vnuoq")
hframes = 5

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer/Timer"]
libraries = {
&"": SubResource("AnimationLibrary_v3dux")
}

[connection signal="animation_finished" from="CanvasLayer/Timer/AnimationPlayer" to="CanvasLayer/Timer" method="_on_animation_player_animation_finished"]
